# pkg-test

./: .gitignore  PKGBUILD  package-lock.json  package.json
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/desktop/: pkg-test.desktop
src-tauri/src/scripts/: update_system.sh
