[package]
name = "pkg-test"
version = "1.0.2"
description = "Test Package Tauri App"
authors = ["dedSyn4p3"]
license = "MIT"
repository = "https://github.com/dedSyn4p3/pkg-test.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
futures = "0.3.25"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["fs-all", "os-all", "path-all", "shell-all"] }
tokio = {version = "1.24.2", features = ["full"] }
pacmanconf = "2.0.0"
alpm = "2.2.1"
alpm-utils = "2.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
